add modal view to Add Note

--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -1,4 +1,44 @@
 $color-bg-darck: #314251;
+$color-navigationDarkSecond: #3a4a5a;
 $color-text-grey: #c8c8c8;
 $fontFamily-header: 'Courier New';
 $fontFamily-content: 'Comic Sans MS';
+
+$color-primary: #293744;
+$color-primaryLight: #1897f2;
+
+$color-primaryDark: #185390;
+$color-primaryDarkFirst: #314251;
+$color-primaryDarkSecond: #3f4c5e;
+
+$color-secondary: #8a61f0;
+
+$color-error:#b00020;
+$color-background:#ffffff;
+$color-Surface:#ffffff;
+$color-SurfaceNot: #c7c7c7;
+$color-SurfaceNotes: #c4c4c4;
+$color-SurfaceNotesList: #e4e4e4;
+
+$color-primary-capacity: rgb(24, 150, 241);
+
+/*$color-primary: rgba(18, 77, 129, 0.56);
+$color-primaryDark: #1897f2;*/
+$color-primary-text:#ffffff;
+
+$fontFamily-custom: 'Opensans';
+
+$customesShadow:0px 10px 20px 0px rgba(0, 0, 0, 0.5);
+
+
+$color-bg: #1897f2;
+//$color-bg-darck: #1471b38c;
+$color-bg-hilight: #1797f28c;
+$color-bg-wight: #ffffff;
+$color-text: #000000;
+$color-text-light: #ffffff;
+$color-text-grey: #c8c8c8;
+$color-row-grey: #c9c9c9;
+
+
+
